--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Responsivo css</title>
+    <title>Responsivo css - alteraçao do tema</title>
 </head>
 
 <body>
